Fix the modal position on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -179,7 +179,9 @@ body {
   position: relative;
   margin: 1rem 0.5rem;
 }
-
+.input-field:not(.input-field--search) .label {
+  font-size: 1.5rem;
+}
 /* 3.2 - Input */
 .input-field .icon {
   position: absolute;
@@ -189,7 +191,7 @@ body {
   line-height: 3.5rem;
 }
 
-.input-field .input {
+.input-field--search .input {
   width: 100%;
   padding: 0 1rem 0 4.2rem;
   background-color: #efefef;
@@ -198,6 +200,15 @@ body {
   font-size: 1.4rem;
   font-weight: bold;
   line-height: 3.5rem;
+}
+
+.input-field:not(.input-field--search) .input {
+  width: 100%;
+  padding: 0.8rem 0.8rem 0.5rem;
+  margin: 0.5rem 0;
+  font-size: 1.3rem;
+  border-radius: 0.3rem;
+  border: #333 1px solid;
 }
 
 .input-field .input:focus,
@@ -254,6 +265,23 @@ body {
   .only-on-mobile {
     display: none;
   }
+}
+
+/* 4.3 - Overflow */
+.overflow-hidden {
+  position: fixed;
+  overflow: hidden;
+}
+
+.overflow-hidden::after {
+  content: "";
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(51, 51, 51, 0.5);
 }
 
 /* LAYOUT */
