--- a/src/components/Modals/Modals.css
+++ b/src/components/Modals/Modals.css
@@ -1,30 +1,27 @@
 .modal-container {
-  position: fixed;
-  cursor: zoom-out;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  position: absolute;
+  overflow-y: auto;
+  display: flex;
+  align-items: center;
   width: 100vw;
-  height: 100vh;
-  background: rgba(51, 51, 51, 0.5);
+  min-height: 100vh;
+  padding: 3rem 0;
 }
+
 .modal {
   cursor: default;
-  position: fixed;
+  position: relative;
   z-index: 100;
-  top: 50%;
-  left: 50%;
-  width: 90%;
-  max-width: 100rem;
+  /* left: 50%; */
+  max-width: 60rem;
   background: #fff;
+  margin: auto;
   border-radius: 1rem;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
 }
 
 .modal-header {
-  padding: 1rem 4.5rem 0.8rem;
+  padding: 1rem 5rem 0.8rem;
   text-align: center;
 }
 
@@ -46,9 +43,11 @@
 
 @media (max-width: 700px) {
   .modal {
-    top: 3rem;
-    overflow-y: auto;
-    transform: translate(-50%, 0%);
+    width: 85%;
+  }
+
+  .modal-container {
+    padding: 2.5rem 0;
   }
 
   .modal-footer .btn-right {
